--- a/pom.xml
+++ b/pom.xml
@@ -27,26 +27,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<!--  
-			<exclusions>
-			-->
-				<!-- 排除tomcat使用jetty -->
-			
-			<!-- 
-				<exclusion>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
-					<groupId>org.springframework.boot</groupId>
-				</exclusion>
-			</exclusions>
-			-->
 		</dependency>
-		<!-- 引入其他Serlvet容器 -->
-		<!--  
+		<!-- 引入Java-jdbc -->
 		<dependency>
-			<artifactId>spring-boot-starter-jetty</artifactId>
-			<groupId>org.springframework.boot</groupId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
-		-->
+		<!-- 引入Mybatis启动器 -->
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		<!-- 引入druid -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>druid</artifactId>
+		    <version>1.1.8</version>
+		</dependency>
 		<!-- 引入thymeleaf模板引擎 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,7 +57,7 @@
 		    <artifactId>jquery</artifactId>
 		    <version>3.3.1</version>
 		</dependency>
-		<!-- 引入博otstrap的webjars -->
+		<!-- 引入Bootstrap的webjars -->
 		<dependency>
 		    <groupId>org.webjars</groupId>
 		    <artifactId>bootstrap</artifactId>
