--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,9 @@ spring:
              
 mybatis:
     mapper-locations: classpath:com/hxb/dao/*.xml
+    configuration:
+        # 显示SQL语句
+        log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
         
         
         
