--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,27 @@
 		    <version>5.3.1</version>
 		    <scope>test</scope>
 		</dependency>
+		<!-- json处理 -->
+		<dependency>
+	        <groupId>com.fasterxml.jackson.core</groupId>
+	        <artifactId>jackson-databind</artifactId>
+	        <version>2.9.3</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.fasterxml.jackson.core</groupId>
+	        <artifactId>jackson-core</artifactId>
+	        <version>2.9.3</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.fasterxml.jackson.core</groupId>
+	        <artifactId>jackson-annotations</artifactId>
+	        <version>2.9.3</version>
+	    </dependency>
+
+
+
+
+		
         <!-- 热部署模块 -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
