--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- 引入redis缓存 -->
+<dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-redis</artifactId>
+    <version>2.1.5.RELEASE</version>
+</dependency>
+
+
+
+
+
+
+
+
+
 		<!-- junit -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
