--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,20 @@ spring:
         maxPoolPreparedStatementPerConnectionSize: 20
         useGlobalDataSourceStat: true
         connectionProperties: druid.stat.mergeSql=true,druid.stat.slowSqlMillis=500
+
+    # redis缓存配置
+    redis:
+        database: 0                   # 数据库索引（默认为0）
+        host: 127.0.0.1               # 服务器地址
+        port: 6379                    # 连接端口
+        password:                     # 服务器连接密码
+        timeout: 20000                # 连接超时时间（毫秒）
+        pool:
+            max-active: 8             # 连接池最大连接数，（使用负值表示没有限制）
+            min-idle: 0               # 连接池中最小空闲连接数
+            max-idle: 8               # 连接池中最大空闲连接数
+            max-wait: -1              # 连接池最大阻塞等待时间（使用负值表示没有限制）
+
              
 mybatis:
     mapper-locations: classpath:com/hxb/dao/*.xml
